feat: vertical oriented button group (#755)
* feat: vertical oriented button group

This commit added a new prop(orientation) to the current OuiButtonGroup,
the possible values are `horizontal` and `vertical`. The default value
is `horizontal` which match the current UI behavior. With `vertical`
prop, the button group will be oriented vertically.

related issue: #659

Signed-off-by: Yulong Ruan <ruanyl@amazon.com>

* doc(changelog): add changelog for vertical button group

Signed-off-by: Yulong Ruan <ruanyl@amazon.com>

* fix(lint): fix sass lint

Signed-off-by: Yulong Ruan <ruanyl@amazon.com>

---------

Signed-off-by: Yulong Ruan <ruanyl@amazon.com>

--- a/src/components/button/button_group/_button_group.scss
+++ b/src/components/button/button_group/_button_group.scss
@@ -51,3 +51,10 @@
     overflow: visible;
   }
 }
+
+.ouiButtonGroup--vertical {
+  .ouiButtonGroup__buttons {
+    height: auto;
+    flex-direction: column;
+  }
+}
