--- a/src-docs/src/components/guide_components.scss
+++ b/src-docs/src/components/guide_components.scss
@@ -344,12 +344,14 @@ body {
   }
 }
 
-.guideHomePage__benefitsContainer, .guideHomePage__featuredComponents {
+.guideHomePage__benefitsContainer,
+.guideHomePage__featuredComponents {
   display: grid;
-  gap: $ouiSizeL;
+  gap: $ouiSizeL; // sass-lint:disable-line no-misspelled-properties
   padding-left: $ouiSizeL;
   padding-right: $ouiSizeL;
 }
+
 .guideHomePage__benefitsContainer {
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
