--- a/src/components/button/button_empty/_button_empty.scss
+++ b/src/components/button/button_empty/_button_empty.scss
@@ -25,13 +25,13 @@
   animation: none !important; /* 1 */
   transition-timing-function: ease-in; /* 2 */
   transition-duration: $ouiAnimSpeedFast; /* 2 */
-  line-height: inherit;
 
   .ouiButtonEmpty__content {
     padding: 0 $ouiSizeS;
   }
 
   .ouiButtonEmpty__text {
+    display: flex;
     text-overflow: ellipsis;
     overflow: hidden;
   }
