--- a/src/global_styling/variables/_colors.scss
+++ b/src/global_styling/variables/_colors.scss
@@ -157,20 +157,20 @@ $ouiColorChartBand: $ouiColorLightestShade !default;
 $ouiCodeBlockBackgroundColor: $ouiColorLightestShade !default;
 $ouiCodeBlockColor: makeHighContrastColor($ouiTextColor, $ouiCodeBlockBackgroundColor) !default;
 $ouiCodeBlockSelectedBackgroundColor: inherit !default;
-$ouiCodeBlockCommentColor: makeHighContrastColor($ouiColorVis10, $ouiCodeBlockBackgroundColor) !default;
+$ouiCodeBlockCommentColor: $ouiColorVis10 !default;
 $ouiCodeBlockSelectorTagColor: inherit !default;
-$ouiCodeBlockStringColor: makeHighContrastColor($ouiColorVis11, $ouiCodeBlockBackgroundColor) !default;
+$ouiCodeBlockStringColor: $ouiColorVis11 !default;
 $ouiCodeBlockTagColor: makeHighContrastColor($ouiColorVis1, $ouiCodeBlockBackgroundColor) !default;
-$ouiCodeBlockNameColor: makeHighContrastColor($ouiColorVis12, $ouiCodeBlockBackgroundColor) !default;
-$ouiCodeBlockNumberColor: makeHighContrastColor($ouiColorVis13, $ouiCodeBlockBackgroundColor) !default;
-$ouiCodeBlockKeywordColor: makeHighContrastColor($ouiColorVis14, $ouiCodeBlockBackgroundColor) !default;
+$ouiCodeBlockNameColor: $ouiColorVis12 !default;
+$ouiCodeBlockNumberColor: $ouiColorVis13 !default;
+$ouiCodeBlockKeywordColor: $ouiColorVis14 !default;
 $ouiCodeBlockFunctionTitleColor: inherit !default;
-$ouiCodeBlockTypeColor: makeHighContrastColor($ouiColorVis12, $ouiCodeBlockBackgroundColor) !default;
+$ouiCodeBlockTypeColor: $ouiColorVis12 !default;
 $ouiCodeBlockAttributeColor: inherit !default;
 $ouiCodeBlockSymbolColor: makeHighContrastColor($ouiColorVis9, $ouiCodeBlockBackgroundColor) !default;
 $ouiCodeBlockParamsColor: inherit !default;
 $ouiCodeBlockMetaColor: makeHighContrastColor($ouiTextSubduedColor, $ouiCodeBlockBackgroundColor) !default;
-$ouiCodeBlockTitleColor: makeHighContrastColor($ouiColorVis15, $ouiCodeBlockBackgroundColor) !default;
+$ouiCodeBlockTitleColor: $ouiColorVis15 !default;
 $ouiCodeBlockSectionColor: makeHighContrastColor($ouiColorVis9, $ouiCodeBlockBackgroundColor) !default;
 $ouiCodeBlockAdditionColor: makeHighContrastColor($ouiColorVis0, $ouiCodeBlockBackgroundColor) !default;
 $ouiCodeBlockDeletionColor: makeHighContrastColor($ouiColorDanger, $ouiCodeBlockBackgroundColor) !default;
