--- a/src/themes/v9/v9_colors_dark.scss
+++ b/src/themes/v9/v9_colors_dark.scss
@@ -77,13 +77,13 @@ $ouiShadowColor: #000;
 $ouiShadowColorLarge: $ouiShadowColor;
 
 //CodeBlock Colors
-$ouiCodeBlockCommentColor: makeHighContrastColor($ouiCodeBlockCommentShade);
-$ouiCodeBlockStringColor: makeHighContrastColor($ouiCodeBlockStringShade);
-$ouiCodeBlockNameColor: makeHighContrastColor($ouiCodeBlockNameShade);
-$ouiCodeBlockNumberColor: makeHighContrastColor($ouiCodeBlockNumberShade);
-$ouiCodeBlockKeywordColor: makeHighContrastColor($ouiCodeBlockKeywordShade);
-$ouiCodeBlockTypeColor: makeHighContrastColor($ouiCodeBlockTypeShade);
-$ouiCodeBlockTitleColor: makeHighContrastColor($ouiCodeBlockTitleShade);
+$ouiCodeBlockCommentColor: $ouiCodeBlockCommentShade;
+$ouiCodeBlockStringColor: $ouiCodeBlockStringShade;
+$ouiCodeBlockNameColor: $ouiCodeBlockNameShade;
+$ouiCodeBlockNumberColor: $ouiCodeBlockNumberShade;
+$ouiCodeBlockKeywordColor: $ouiCodeBlockKeywordShade;
+$ouiCodeBlockTypeColor: $ouiCodeBlockTypeShade;
+$ouiCodeBlockTitleColor: $ouiCodeBlockTitleShade;
 
 /* OUI -> EUI Aliases */
 $euiCodeBlockCommentColor: $ouiCodeBlockCommentColor;
