--- a/src/themes/oui-next/global_styling/reset/_index.scss
+++ b/src/themes/oui-next/global_styling/reset/_index.scss
@@ -9,6 +9,8 @@
  * GitHub history for details.
  */
 
-@import 'reset';
-@import 'hacks';
-@import 'scrollbar';
+@layer theme {
+  @import 'reset';
+  @import 'hacks';
+  @import 'scrollbar';
+}
